# hr_job_cv_matcher

./: README.md  chainlit.md  prompts.md  pyproject.toml
hr_job_cv_matcher/: config.py  list_utils.py  log_init.py  matcher_chainlit.py  model.py  pdf_to_text_client.py
hr_job_cv_matcher/service/: candidate_ranking.py  chart_generator.py  cv_processing.py  document_matcher.py  education_extraction.py  job_description_cv_matcher.py
hr_job_cv_matcher/service/test/: candidate_profile_provider.py  document_matcher_test.py  job_description_cv_provider.py
hr_job_cv_matcher/ui/: chat_settings.py  matcher_chainlit.py  messages.py
